[package]
name = "vestroll_lifecycle"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
vestroll_common = { version = "0.1.0", path = "../common" }
vestroll_profile = { version = "0.1.0", path = "../profile" }
vestroll_vault = { version = "0.1.0", path = "../vault" }
